.k8s/overlays/prod/patch-deployment-frontend_TEMPLATE.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: w255mids.azurecr.io/[REPOSITORY]/[IMAGE_TAG]
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
