.k8s/overlays/prod/patch-deployment-pythonapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: pythonapi
          image: w255mids.azurecr.io/rmarin/pythonapi:latest
          resources:
            limits:
              cpu: 99m
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 512Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
