.k8s/overlays/prod/patch-deployment-pythonapi_TEMPLATE.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: pythonapi
          image: w255mids.azurecr.io/rmarin/pythonapi:[TAG]
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 1500m
              memory: 1024Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
