.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-pythonapi
spec:
  hosts:
    - rmarin.mids255.com
  gateways:
    - istio-ingress/rmarin-gateway
  http:
    - match:
        - uri:
            prefix: /conversations
        - uri:
            prefix: /messages
        - uri:
            exact: /health
        - uri:
            exact: /docs
        - uri:
            exact: /openapi.json
      route:
        - destination:
            host: pythonapi
            port:
              number: 8000
    - route:
      - destination:
          host: frontend
          port:
            number: 3000
      corsPolicy:  # Y también para las rutas de frontend si es necesario
        allowOrigins:
        - exact: "http://localhost:3000"
        - exact: "http://localhost:8000"
        - exact: "https://rmarin.mids255.com"
        - exact: "*"
        allowMethods:
        - POST
        - GET
        - OPTIONS 
        allowCredentials: true
        allowHeaders:
        - "*"
        maxAge: "24h"
