.k8s/overlays/prod/virtual-service_NO.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-pythonapi
spec:
  hosts:
  - rmarin.mids255.com
  gateways:
  - istio-ingress/rmarin-gateway
  http:
  - match:
    - uri:
        exact: /conversations
    route:
    - destination:
        host: pythonapi
        port:
          number: 8000
  - match:
    - uri:
        exact: /messages
    route:
    - destination:
        host: pythonapi
        port:
          number: 8000
  - match:
    - uri:
        prefix: /health
    route:
    - destination:
        host: pythonapi
        port:
          number: 8000
  - match:
    - uri:
        prefix: /docs
    route:
    - destination:
        host: pythonapi
        port:
          number: 8000
  - match:
    - uri:
        prefix: /openapi.json
    route:
    - destination:
        host: pythonapi
        port:
          number: 8000
  - match:
    - uri:
        exact: /  # Match the root path
    route:
    - destination:
        host: frontend  # The name of the service for the frontend
        port:
          number: 3000  # The port where the frontend is running



          corsPolicy:
          allowOrigins:
          - exact: "http://localhost:3000"
          - exact: "http://localhost:8000"
          - exact: "https://rmarin.mids255.com"
          allowMethods:
          - POST
          - GET
          allowCredentials: true
          allowHeaders:
          - authorization
          - content-type
