.k8s/overlays/prod/virtual-service_cors1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-pythonapi
spec:
  hosts:
    - rmarin.mids255.com
  gateways:
    - istio-ingress/rmarin-gateway
  http:
    - match:
        - uri:
            prefix: /conversations
        - uri:
            prefix: /messages
        - uri:
            exact: /health
        - uri:
            exact: /docs
        - uri:
            exact: /openapi.json
      route:
        - destination:
            host: pythonapi
            port:
              number: 8000
      corsPolicy:  # Aquí se agrega la política de CORS para las rutas de pythonapi
        allowOrigins:
        - exact: "http://localhost:3000"
        - exact: "http://localhost:8000"
        - exact: "https://rmarin.mids255.com"
        - exact: "*"
        allowMethods:
        - POST
        - GET
        - OPTIONS  # Asegúrate de incluir OPTIONS si quieres manejar solicitudes de preflight
        allowCredentials: true  # Cambia a 'false' si no necesitas credenciales como cookies o auth headers
        allowHeaders:
        - X-Custom-Header
        - Authorization
        - Access-Control-Allow-Origin
        - "*"
        maxAge: "24h"
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 3000
      corsPolicy:  # Y también para las rutas de frontend si es necesario
        allowOrigins:
        - exact: "http://localhost:3000"
        - exact: "http://localhost:8000"
        - exact: "https://rmarin.mids255.com"
        - exact: "*"
        allowMethods:
        - POST
        - GET
        - OPTIONS 
        allowCredentials: true
        allowHeaders:
        - X-Custom-Header
        - Authorization
        - Access-Control-Allow-Origin
        - "*"
        maxAge: "24h"
